[tool.poetry]
name = "tumor-segmentation"
version = "0.1.0"
description = ""
authors = ["Magnus <97634880+MagnusS0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
monai = "^1.3.0"
torch = "^2.1.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
pytest = "^7.4.3"
tensorboard = "^2.15.1"
streamlit = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
